--- a/Analysis II/main.tex
+++ b/Analysis II/main.tex
@@ -1241,16 +1241,17 @@ Weil $f(0) = 0$, $f(x) \geq 0$ für $x > 0$. Dann $|\sin(x)| \leq |x|$ einfach.
 \ln(x + 1) &= \sumk (-1)^{k+1} \frac{x^k}{k} & r &= 1
 \end{align*}
 
+\begin{center}
 \includegraphics[width=7cm]{taylor.png}
 \includegraphics[width=6cm]{sincostan.png}\\
 \includegraphics[width=6cm]{arcsinArccosArctan.png}\\
 \includegraphics[width=6cm]{sinhCoshTanh.png}
-
+\end{center}
 
 \begin{enumerate}
-  \item $cos(z) = cos(-z)$
-  \item $sin(-z) = -sin(z)$
-  \item $cos^2(z) + sin^2(z) = 1 \;\;\; \forall z \in \mathbf{C}$
+  \item $\cos(z) = \cos(-z)$
+  \item $\sin(-z) = -\sin(z)$
+  \item $\cos^2(z) + \sin^2(z) = 1 \;\;\; \forall z \in \mathbf{C}$
 \end{enumerate}
 
 % Hyperbol Funktionen
@@ -1258,11 +1259,13 @@ Weil $f(0) = 0$, $f(x) \geq 0$ für $x > 0$. Dann $|\sin(x)| \leq |x|$ einfach.
 \subsection{Hyperbol Funktionen}
 
 \begin{enumerate}
-  \item $cosh(x) := \frac{e^x + e^{-x}}{2}: \mathbf{R} \rightarrow [1, \infty]$
-  \item $sinh(x) := \frac{e^x - e^{-x}}{2}: \mathbf{R} \rightarrow \mathbf{R}$
-  \item $tanh(x) := \frac{e^x - e^{-x}}{e^x + e^{-x}}: \mathbf{R} \rightarrow [-1, 1]$
+  \item $\cosh(x) := \frac{e^x + e^{-x}}{2}: \mathbf{R} \rightarrow [1, \infty]$
+  \item $\sinh(x) := \frac{e^x - e^{-x}}{2}: \mathbf{R} \rightarrow \mathbf{R}$
+  \item $\tanh(x) := \frac{e^x - e^{-x}}{e^x + e^{-x}}: \mathbf{R} \rightarrow [-1, 1]$
+  \item $\cos(x) = \frac{e^{ix} + e^{-ix}}{2}$
+  \item $\cos(x) = \frac{e^{ix} - e^{-ix}}{2i}$
 \end{enumerate}
-und es gilt $cosh^2(x) - sinh^2(x) = 1$
+und es gilt $\cosh^2(x) - \sinh^2(x) = 1$
 
 
 
