--- a/Analysis II/main.tex
+++ b/Analysis II/main.tex
@@ -224,16 +224,16 @@ $$ = \int2x\cos(x^2) = \sin(x^2) y(x) = \frac{c + \sin(x^2)}{x}$$
        %   of the homogenous problem, then try multiplying by $x^m$
           %where $m$ denotes the multiplicity of the root $\lambda$.
  % \end{enumerate}
+
+
   \begin{center}
     \begin{tabular}{|c|c|}
       \hline
       $b(x)$                              & Guess                                                                  \\ \hline
       $ax^2 + bx$              & $cx^2 + dx + e$                                                 \\ \hline
       $a \cdot e^{\alpha x}$              & $b \cdot e^{\alpha x}$                                                 \\ \hline
-      $a \sin(\beta x)$                   & $c \sin(\beta x) + d \cos(\beta x)$                                    \\ \hline
-      $b \cos(\beta x)$                   & $c \sin(\beta x) + d \cos(\beta x)$                                    \\ \hline
-      $a e^{\alpha x} \sin(\beta x)$      & $e^{\alpha x} \Big( c \sin(\beta x) + d \cos(\beta x) \Big)$           \\ \hline
-      $b e^{\alpha x} \cos(\beta x)$      & $e^{\alpha x} \Big( c \sin(\beta x) + d \cos(\beta x) \Big)$           \\ \hline
+      $a \sin / \cos(\beta x)$                   & $c \sin(\beta x) + d \cos(\beta x)$                                    \\ \hline
+      $a e^{\alpha x} \sin / \cos(\beta x)$      & $e^{\alpha x} \Big( c \sin(\beta x) + d \cos(\beta x) \Big)$           \\ \hline
       $P_n(x) e^{\alpha x}$               & $R_n(x) \cdot e^{\alpha x}$                                            \\ \hline
       $P_n(x) e^{\alpha x} \sin(\beta x)$ & $e^{\alpha x} \Big( R_n(x) \sin(\beta x) + S_n(x) \cos(\beta x) \Big)$ \\ \hline
       $P_n(x) e^{\alpha x} \cos(\beta x)$ & $e^{\alpha x} \Big( R_n(x) \sin(\beta x) + S_n(x) \cos(\beta x) \Big)$ \\ \hline
@@ -533,17 +533,22 @@ $$Curl \neq 0 \rightarrow \text{not a potential}$$
   % ---------- Tangent space -------------------
   \subsection{Tangent space}
   The approximation of the function at $x_0$ using one derivative.
-  $$\{(x, y) \in \R^n \times \R^m \;|\; y = f(x_0) + u(x - x_0)\}$$
-  An example:
+  %$$\{(x, y) \in \R^n \times \R^m \;|\; y = f(x_0) + u(x - x_0)\}$$
+  $$\{(x, y) \in \R^n \times \R^m \;|\; g(x, y) = f(x_0, y_0) + Df(x_0, y_0) +  
+	\begin{pmatrix} x - x_0 \\
+			     y - y_0
+	\end{pmatrix}$$
+\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
   \begin{align*}
     f(x, y)             & = \sqrt{x^2 + y^2}                                                   \\
     J_f                 & = \Big( \frac{x}{\sqrt{x^2 + y^2}}, \frac{y}{\sqrt{x^2 + y^2}} \Big) \\
-    J_f(3, 4)           & = (\frac{3}{5}, \frac{4}{5})                                         \\
-    \Rightarrow g(x, y) & = 5 + (\frac{3}{5}, \frac{4}{5}) \begin{pmatrix}
+    J_f(3, 4)           & = \Big(\frac{3}{5}, \frac{4}{5}\Big)                                       \\
+    \Rightarrow g(x, y) & = 5 + \Big(\frac{3}{5}, \frac{4}{5} \Big)\begin{pmatrix}
       x-3 \\
       y-4
     \end{pmatrix}
   \end{align*}
+\end{tcolorbox}
   % ---------- Chain rule -------------------
   \subsection{Chain rule}
   Let $\X \subset \R^n$ be open,
@@ -557,6 +562,26 @@ $$Curl \neq 0 \rightarrow \text{not a potential}$$
   \end{align*}
 $$\frac{dz}{dt} = \frac{\partial{z}}{\partial{x}} \frac{dx}{dt} + \frac{\partial{z}}{\partial{y}} \frac{dy}{dt}$$
 $$\frac{d}{dt} f(\gamma(t)) = \nabla f (\gamma(t)) \gamma'(t)$$
+\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
+$$ \nabla f (-\frac{\sqrt{3}}{2}, \frac{3}{2}, 7) = (6, 2, 0).$$ Compute
+$$\frac{\partial{f}}{\partial{r}}(\sqrt{3}, \frac{2}{3}\pi, 7)$$
+where $x = r\cos(\theta), y = r\sin(\theta)$ and $z$ are the usual coordinates.
+We have
+$$g(r,\theta,z) = (r \cos(\theta), r \sin(\theta), z)$$
+and therefore (by the chain rule)
+$$\frac{\partial f}{\partial r} = \frac{\partial f(g(r,\theta,z))}{\partial r} = \frac{\partial f}{\partial x} \frac{\partial g_1}{\partial r} + \frac{\partial f}{\partial y} \frac{\partial g_2}{\partial r} + \frac{\partial f}{\partial z} \frac{\partial g_3}{\partial r} = $$ 
+$$\cos(\theta) \frac{\partial f}{\partial x} + \sin(\theta) \frac{\partial f}{\partial y}$$
+
+Notice now that
+
+$$(\sqrt{3} \cos(\frac {2}{3} \pi), \sqrt{3} \sin(\frac{2}{3} \pi), 7) = (-\frac{\sqrt{3}}{2}, \frac{3}{2}, 7)$$
+
+and therefore we obtain
+
+$$\frac{\partial f}{\partial r} = \cos(\frac {2}{3} \pi) \cdot 6 + \sin(\frac{2}{3} \pi) \cdot 2$$
+
+That "notice now" is needed because we want to take $\nabla f$ at $(-\frac{\sqrt{3}}{2}, \frac{3}{2}, 7)$, and since we have $f(g(r,\theta,z))$ we need to find $r,\theta,z$ such that $g(r,\theta,z) = (-\frac{\sqrt{3}}{2}, \frac{3}{2}, 7)$.
+\end{tcolorbox}
   % ---------- Change of variables -------------------
   \subsection{Change of variables}
   We say $f$ is a change of variables around
@@ -634,7 +659,6 @@ Good for approximation $\rightarrow$ affine function
     \lim_{x \ra x_0} & \frac{E_k(f, x, x_0)}{\norm*{x - x_0}^k} \ra 0
   \end{align*}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 Consider the following function:
 $$ f(x, y) := e^{x^2 + y^2} + log(1 + x^2) + \arctan(xy)$$
 $a)$ determine the Taylor plynomial of $f$ at $(0, 0)$ up to and including third order.
@@ -824,7 +848,6 @@ T_3f((0,0); (x,y)) &= f(0,0) + \frac{\partial f(0,0)}{\partial x}x + \frac{\part
 The length of a curve (Bogenlänge) from a function $f$ on the interval $[a, b]$ is 
 $$ L = \int_a^b \sqrt{1 + (f'(x))^2}dx$$
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 $v(x, y) = \begin{pmatrix}
     x^2 - 2xy\\
     y^2 - 2xy
@@ -868,7 +891,6 @@ The integral of $v$ along the curve $\gamma$ is
                         & = (g \circ \gamma)(b) - (g \circ \gamma)(a)
   \end{align*}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 $f(x,y) = (2xy^2 - 5x^4y + 5, -7y^6 - x^5 + 2x^2y)$ is conservative and its potential is:
 $$g(x,y) = x^2y^2 - x^5y + 5x - y^7$$
 We want to compute $\int_\gamma f \cdot ds$ where $\gamma$ is the parametrised curve:
@@ -886,7 +908,6 @@ So we have:
     \pdv{g}{y} = 2x    & \neq 2x^2y + h'(y)
   \end{align*}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 $f(x,y) = 
 \begin{pmatrix} 
 3x^2 y \\
@@ -1159,7 +1180,6 @@ With partiel differentiation with respect of y and under consideration of $\frac
     \int_\gamma f \; ds = \int_{\gamma_1} f \; ds +\int_{\gamma_2} f \; ds
   \end{align*}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 Straight forward application of Green's formula: if $\gamma$ is a simple closed param. curve. Calculate
 $$ \int_\gamma f \; ds = \int_b^b \langle f\gamma(t)), \gamma'(t)\rangle dt$$
 $\gamma$  simple closed parameter curve.
@@ -1177,7 +1197,6 @@ $$\partial{x}f_2 - \partial{y}f_1 = 2y - 0 = 2y$$
 $$\int_{\partial{A}} f ds = \int_A 2y dx dy = \int_0^1 \int_0^{3x} 2y dydx = \int_0^1 9x^2 dx = 3$$
 \end{tcolorbox}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]
-\subsubsection{Example}
 Calculate the area of $\Omega := {(x, y) \in \R^2 | (x-2)^2 - 1 \le y \le 0}$ with the Green's formula. \\
 First, calculate intersection points:
   \begin{align*}
@@ -1198,32 +1217,7 @@ $$curl v(x, y) = \frac{\partial{v_y}}{\partial{x}} (x, y) - \frac{\partial{v_x}}
 				&= 18 - \frac{2}{3} - 18 + 2 = \frac{4}{3}
 \end{align*}
 \end{tcolorbox}
-  % ---------- Divergence -------------------
-  \subsection{Divergence}
-  For a vector field $f: \R^n \ra \R^n$ and $f \in C^1$,
-  $f = (f_1, \dots, f_n)$ the divergence of $f$ is defined by
-  \begin{align*}
-    div \, f = \pdv{f_1}{x_1} + \dots + \pdv{f_n}{x_n}
-  \end{align*}
-  which for $n = 2$ we can calculate using Green's formula.
-  \begin{align*}
-    \tilde{f}(x, \, y)                          & = (-f_2, \, f_1)                                                        \\
-    curl(\tilde{f})                             & = \pdv{f_1}{x} + \pdv{f_2}{y} = div(f)                                  \\
-    \int \int_\X div(f) \; dx \, dy             & = \int \int_\X curl(f) \; dx \, dy = \int_{\partial \X} \tilde{f} \; ds \\
-    \int_a^b (f_1(\gamma(t)), f_2(\gamma(t)))   & \cdot (\gamma_2'(t), - \gamma_1'(t)) \; dt                              \\
-    = \int_a^b (f_1(\gamma(t)), f_2(\gamma(t))) & \cdot n(t) \; dt
-  \end{align*}
-  Here $n(t)$ is called the exterior normal to
-  the curve and $\gamma'(t) \cdot n(t) = 0$.
-  % ---------- Divergence-flux -------------------
-  \subsection{Divergence-flux}
-  The form or the normal form of Green's theorem.
-  \begin{align*}
-    f:(f_1, \, f_2): \X \ra \R^2                                                               \\
-    \int \int_\X div(f) \; dx \, dy = \int_{\partial \X} f \; d \vectorarrow{n}                \\
-    \text{or}                                                                                  \\
-    \int \int_\X curl(f) \; dx \, dy = \int_{\partial \X} \vectorarrow{f} \; d \vectorarrow{s} \\
-  \end{align*}
+
 \newpage{}
 \section{Other}
 
@@ -1308,10 +1302,12 @@ Weil $f(0) = 0$, $f(x) \geq 0$ für $x > 0$. Dann $|\sin(x)| \leq |x|$ einfach.
 \end{align*}
 
 \begin{center}
-\includegraphics[width=7cm]{taylor.png}
+\includegraphics[width=7cm]{taylor.png}\\
+\includegraphics[width=6cm]{sincostantable.png}\\
 \includegraphics[width=6cm]{sincostan.png}\\
 \includegraphics[width=6cm]{arcsinArccosArctan.png}\\
 \includegraphics[width=6cm]{sinhCoshTanh.png}
+
 \end{center}
 
 \begin{enumerate}
@@ -1560,6 +1556,9 @@ Inhomogenous otherwise.
   oder undefiniert ist.
 
 \subsection{Important}
+\begin{enumerate}
+\item The function $f : \R^2 \rightarrow \R f(x, y) = |xy|$ is differentiable in $(0, 0)$
+\end{enumerate}
 
 
 \end{multicols*}
